--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,7 +1,7 @@
 ---
-  title: Home,
-  description: Welcome to our GTA V and FiveM Documentation for vehicle developers!,
-  openGraph: ../public/banner.jpg,
+  title: Home
+  description: Welcome to our GTA V and FiveM Documentation for vehicle developers!
+  openGraph: ../public/banner.jpg
 ---
 
 import Image from 'next/image';
